Bug 478219 - [refs][search] References results should be shown grouped by confidence or place - fix bad alignment

--- a/bundles/org.eclipse.orion.client.ui/web/orion/globalSearch/globalSearch.css
+++ b/bundles/org.eclipse.orion.client.ui/web/orion/globalSearch/globalSearch.css
@@ -15,6 +15,14 @@
 	width: 38px;
 }
 
+.refs_primaryColumn {
+	padding-left: 0 !important;
+	padding-top: 0 !important;
+	vertical-align: top;
+	white-space: nowrap;
+	width: 14px;
+}
+
 .search_primaryColumn_Details {
 	padding-left: 0 !important;
 	text-align: right;
